Fixed a couple issues