@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.baddcamdne</groupId>
-    <artifactId>attribute-item-utils</artifactId>
+    <groupId>AttributeItemUtils</groupId>
+    <artifactId>AttributeItemUtils</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -61,12 +61,6 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <testCompilerArgs>
-                        <arg>--enable-preview</arg>
-                    </testCompilerArgs>
                 </configuration>
             </plugin>
             <plugin>
